kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/argocd-applicationset/metrics.yaml
---
# Source: argo-cd/templates/argocd-applicationset/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-applicationset-controller-metrics
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.10.2
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
spec:
  type: ClusterIP  
  ports:
  - name:  http-metrics
    protocol: TCP
    port: 8080
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argocd
