kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/argocd-applicationset/service.yaml
---
# Source: argo-cd/templates/argocd-applicationset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-applicationset-controller
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.9.4
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.3"
spec:
  type: ClusterIP  
  ports:
  - name: http-webhook
    port: 7000
    targetPort: webhook
  selector:
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argocd
