kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/argocd-applicationset/networkpolicy.yaml
---
# Source: argo-cd/templates/argocd-applicationset/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-applicationset-controller
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.10.1
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
